# mini-ls

./: .gitignore  Cargo.toml  README.md
src/: arg_processing.rs  lib.rs  main.rs  output_formatting.rs
