[package]
name = "mini-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
term_size = "0.3.2"
chrono = "0.4.31"
unicode-segmentation = "1.10.1"

[dev-dependencies]
filepath = "0.1.2"
tempfile = "3"

